--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">CheaptagsApplication</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="open_nav">OpenNavBar</string>
+    <string name="close_nav">CloseNavBar</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
